--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <title>20 Ejercicios con JavaScript</title>
   <style>
-    body { font-family: Arial, sans-serif; padding: 20px; background-color: #96ad45;}
+    body { font-family: Arial, sans-serif; padding: 20px; background-color: #B0C9ED;}
     section { margin-bottom: 40px; border-bottom: 1px solid #ccc; padding-bottom: 20px; }
-    button { margin-top: 10px; padding: 10px 15px; border: none; background: #da0a41; color: white; border-radius: 6px; cursor: pointer; }
-    button:hover { background: #da0a41; }
+    button { margin-top: 10px; padding: 10px 15px; border: none; background: #616EED; color: white; border-radius: 6px; cursor: pointer; }
+    button:hover { background: #61C6ED; }
     input[type="text"] { padding: 5px; }
     h1 {
       text-align: center;
@@ -27,7 +27,7 @@
     .grid-botones button {
       padding: 15px;
       border: none;
-      background: #da0a41;
+      background: #6033F0;
       color: white;
       font-size: 16px;
       border-radius: 8px;
@@ -35,7 +35,7 @@
     }
 
     .grid-botones button:hover {
-      background: #c00b39;
+      background: #619AED;
     }
 
     section {
