correción de error

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     input[type="text"] { padding: 5px; }
     h1 {
       text-align: center;
-      font-size: 50px;
+      font-size: 70px;
       font-family: 'Pacifico', cursive;
       margin-top: 20px;
     }
@@ -144,7 +144,7 @@
   <section id="number12">
     <h2>Lista de equipos</h2>
     <ul id="listaFrutas3"></ul>
-    <button onclick="mostrarFrutas3()">Mostrar frutas</button>
+    <button onclick="mostrarFrutas3()">Mostrar equipos</button>
     <script>
       const frutas3 = ["Real Madrid", "Barcelona", "Manchester United", "Chelsea", "Arsenal"];
       function mostrarFrutas3() {
